# Django-Reviewhub-App

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  manage.py  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/products/: handlers.py  schemas.py
core/api/v1/users/: handlers.py
core/apps/common/: exceptions.py
core/apps/products/: admin.py  containers.py
core/apps/products/entities/: reviews.py
core/apps/products/migrations/: 0001_initial.py  0002_review.py
core/apps/products/models/: products.py  reviews.py
core/apps/products/services/: products.py
core/apps/users/: admin.py  models.py
core/apps/users/exceptions/: codes.py
core/apps/users/migrations/: 0001_initial.py  0002_alter_customer_options_alter_customer_token.py
core/apps/users/services/: auth.py  codes.py  customer.py  senders.py
core/project/: containers.py  local_settings.py  settings.py  urls.py
docker_compose/: app.yaml  storages.yaml
tests/servises/: conftest.py  test_products.py
